# pology

./: .flake8  .gitignore  .gitlab-ci.yml  CMakeLists.txt  COPYING.BSD  COPYING.GPLv3  MANIFEST.in  NEWS  README  README.rst  TODO  VERSION  __init__.py  make-release-tarball.sh  makeApiDoc.sh  posieve.py  posummit.py  potagsplit.py  setup.py  tox.ini
lang/ca/rules/: CMakeLists.txt  README  abbreviations.rules  abbreviations.rules.disabled  acronyms.rules  all-misc.rules.disabled  all-template_find-cerca.rules.disabled  apps-edu.rules.disabled  apps-financial.rules.disabled  apps-games.rules.disabled  apps-graphics.rules.disabled  apps-kdepim.rules.disabled  apps-kstars.rules.disabled  apps-multimedia.rules.disabled  barbarism.rules  common-mistakes.rules  date-format.rules  diacritical_accent.rules  doc-entities.rules  false-friends.rules  filter.include  gender-neutralization.rules  html-tag.rules  iso_639.rules  kde-ca-team.rules  keys.rules  punctuation.rules  restructuredtext.rules  tags.rules  terminology-sc.rules  terminology-sc.rules.disabled  typography.rules
lang/cs/spell/: CMakeLists.txt  dict.aspell  geography.aspell  kstars.aspell  misc.aspell  names.aspell  short.aspell  software.aspell  xremains.aspell
lang/es/rules/: CHANGELOG  CMakeLists.txt  README  TODO  being-polite.rules  being-polite.rules.disabled  common-mistakes.rules  discordances.rules  false-friends.rules  filter.include  gerund-detector.rules  gerund-detector.rules.disabled  glosario-kde-l10n-es-proposed.rules  glosario-kde-l10n-es.rules  grammar.rules  kde-l10n-es-proposed.rules  kde-l10n-es.rules  metric-units.rules  paired-words.rules  paragraph-begin.rules  paragraph-end.rules  proper-names.rules  spelling.rules  terminology.rules  translators.rules  typography.rules  user-interface.rules
lang/gl/rules/: CMakeLists.txt  README.rst  README.txt  aaPT.rules  antigas.rules  controlledLang.rules  controlledLang_gl.rules  controlledLang_trasnadas.rules  expression.rules  filter.include  frequentExpressions.rules  gnome.rules  kde.rules  kde_choices.rules  n11n.rules  outras.rules  rag.rules  terminology.rules  terminology.rules.blocked  terminology_trasnadas.rules  terminology_trasnadas.rules.blocked  terminology_trasnadas_dual.rules  terminology_trasnadas_dual.rules.blocked  terminology_trasnadas_dual_rules.rules  terminology_unagreed_rules.rules.disabled  trasno.rules  xfceGnome_choices.rules
lang/ja/spell/katakana/: CMakeLists.txt  astro.aspell  countries.aspell  dev.aspell  elements.aspell  kde.aspell  languages.aspell  moji.aspell  multimedia.aspell  music.aspell  network.aspell
lang/nn/rules/: CMakeLists.txt  bokmal-words.rules  domain.rules  english.rules  grammar.rules  kde.rules  lag-paradigme-oversikt.R  orthography.rules  ortography.rules  paradigme-komboar.csv  puretext.filters  team-choices.rules  technical.rules  unfiltered.rules
pology/: CMakeLists.txt  __init__.py  ascript.py  bad_patterns.py  bpatterns.py  catalog.py  check_lingo.py  check_markup.py  checks.py  colors.py  comments.py  config.py  diff.py  entities.py  equip_header.py  escape.py  fsops.py  getfunc.py  gettext_tools.py  gtxtools.py  header.py  langdep.py  markup.py  match.py  merge.py  message.py  monitored.py  msgreport.py  multi.py  noop.py  normalize.py  normalize_header.py  normalize_message.py  remove.py  remove_subs.py  report.py  resolve.py  rules.py  sieve.py  spell.py  (+11 more)
pology/internal/: CMakeLists.txt  __init__.py  poediffpatch.py
pology/lang/: CMakeLists.txt  __init__.py
pology/lang/ca/rules/: apps-edu.rules.disabled  apps-games.rules.disabled  apps-kdepim.rules.disabled  diacritical_accent.rules  html-tag.rules  iso_4217.rules  kde-ca-team.rules
pology/lang/ca/sieve/: CMakeLists.txt
pology/lang/cs/spell/: CMakeLists.txt  software.aspell
pology/lang/es/: CMakeLists.txt  __init__.py  compare_with_original.py  remove_subs.py  remove_tags_without_translation.py
pology/lang/es/rules/: gerund-detector.rules  metric-units.rules  spelling.rules
pology/lang/es/scripts/: createProperWordsDict.py  generar-mensajes.sh  revisar-traducciones-con-translate-toolkit.sh  revisar-traducciones.sh
pology/lang/es/sieve/: setUbsp.py
pology/lang/es/spell-spec/: IT.aspell  chemical_compounds.aspell  glosary-kde-es.aspell  graphics.aspell  instruments.aspell  science.aspell  units.aspell
pology/lang/fr/: CMakeLists.txt  __init__.py  patternAccents.py  patternEntities.py
pology/lang/fr/rules/: doc-entities.rules  typography.rules
pology/lang/fr/sieve/: CMakeLists.txt
pology/lang/gl/rules/: antigas.rules  rag.rules  (+1 more)
pology/lang/ja/: CMakeLists.txt  katakana.py
pology/lang/ko/: CMakeLists.txt  __init__.py  language.py
pology/lang/nb/: CMakeLists.txt  __init__.py  exclusion.py
pology/lang/nn/: CMakeLists.txt  __init__.py  exclusion.py
pology/lang/sr/: CMakeLists.txt  __init__.py  accents.py  charsets.py  checks.py  limit_chset.py  mod_uiref.py  nobr.py  reduce.py  trapnakron.py  trapres.py  uiref.py  wconv.py
pology/proj/: CMakeLists.txt  __init__.py
pology/proj/kde/: CMakeLists.txt  __init__.py  cattype.py  header.py
pology/sieve/: CMakeLists.txt  check_spell.py  check_spell_ec.py  check_tp_wesnoth.py  normctxt_sep.py  resolve_aggregates.py  resolve_alternatives.py  resolve_entities.py  unfuzzy_ctxmark_only.py
pology/spec/: docbook4.l1
sieve/: CMakeLists.txt  __init__.py  apply_filter.py  apply_header_filter.py  bad_patterns.py  check_docbook4.py  check_grammar.py  check_kde4.py  check_rules.py  check_spec_kde4.py  check_spell.py  check_spell_ec.py  check_tp_kde.py  check_tp_wesnoth.py  check_xml_docbook4-spec.txt  check_xml_docbook4.py  check_xml_kde4.py  collect_pmap.py  count_ctxmark.py  diff_previous.py  empty_fuzzies.py  equip_header_tp_kde.py  fancy_quote.py  find_messages.py  generate_xml.py  merge_corr_tree.py  normalize_header.py  normctx_ooo.py  normctxt_delim.py  normctxt_sep.py  remove_fuzzy_comments.py  remove_obsolete.py  remove_previous.py  resolve_aggregates.py  resolve_alternatives.py  resolve_entities.py  set_header.py  stats.py  tag_incomplete.py  tag_untranslated.py  (+6 more)
(+1251 files in other folders)
