set(files
    abbreviations.rules
    acronyms.rules
    barbarism.rules
    common-mistakes.rules
    date-format.rules
    diacritical_accent.rules
    doc-entities.rules
    false-friends.rules
    filter.include
    gender-neutralization.rules
    html-tag.rules
    iso_4217.rules
    iso_639.rules
    kde-ca-team.rules
    keys.rules
    punctuation.rules
    restructuredtext.rules
    tags.rules
    terminology-sc.rules
    typography.rules
)
get_current_source_subdir(srcsubdir)
install(FILES ${files} DESTINATION ${DATA_INSTALL_DIR}/${srcsubdir})
