set(files
    filter.include
    being-polite.rules
    common-mistakes.rules
    discordances.rules
    false-friends.rules
    gerund-detector.rules
    grammar.rules
    kde-l10n-es-proposed.rules
    kde-l10n-es.rules
    paired-words.rules
    paragraph-begin.rules
    paragraph-end.rules
    proper-names.rules
    spelling.rules
    translators.rules
    typography.rules
    user-interface.rules
)
get_current_source_subdir(srcsubdir)
install(FILES ${files} DESTINATION ${DATA_INSTALL_DIR}/${srcsubdir})
